added translation keys

--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -16,6 +16,7 @@
     "category": "Categoria",
     "image": "Immagine",
     "name": "Nome",
-    "surname": "Cognome"
+    "surname": "Cognome",
+    "test": "Questo è un test"
   }
 }
