added new translation keys

--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -17,6 +17,7 @@
     "image": "Immagine",
     "name": "Nome",
     "surname": "Cognome",
-    "test": "Questo è un test"
+    "test": "Questo è un test",
+    "productsManagement": "Gestione prodotti"
   }
 }
