--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -18,6 +18,7 @@
     "category": "Category",
     "image": "Image",
     "name": "Name",
-    "surname": "Surname"
+    "surname": "Surname",
+    "productsManagement": "Product Management"
   }
 }
