--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -19,6 +19,75 @@
     "image": "Image",
     "name": "Name",
     "surname": "Surname",
-    "productsManagement": "Product Management"
+    "productsManagement": "Product Management",
+    "couponsManagement": "Coupons Management",
+
+    "logout": "Logout",
+    "birthDate": "Birth Date",
+    "percentage": "Percentage",
+    "value": "Value",
+    "personalArea": "Personal Area",
+    "profilePicture": "Profile Picture",
+    "rowsPerPage": "Rows per page",
+    "page": "Page",
+    "or": "or",
+    "add": "Add",
+    "edit": "Edit",
+    "search": "Search",
+    "filter": "Filter",
+    "dashboard": "Dashboard",
+    "pageNotFound": "Page Not Found",
+    "actions": "Actions",
+    "paymentStatus": "Payment Status",
+    "total": "Total",
+    "address": "Address",
+    "altImageIt": "Name of the picture in Italian",
+    "altImageEn": "Name of the picture in English",
+    "expirationDate": "Expiration Date",
+
+    "orderDetails": "Order Details",
+    "productDetails": "Product Details",
+    "discountDetails": "Discount Details",
+    "couponDetails": "Coupon Details",
+    "userDetails": "User Details",
+
+    "errorHeavyImage": "The image is too big",
+    "errorWrongFile": "The file you tried to upload must be",
+
+    "addProduct": "Add Product",
+    "addOrder": "Add Order",
+    "addCoupon": "Add Coupon",
+    "addDiscount": "Add Discount",
+    "addMarketingEmployee": "Add Marketing employee",
+    "addDataEntryEmployee": "Add Data Entry employee",
+    "addImage": "Add Image",
+    "addDescriptionIt": "Add a Description in Italian",
+    "addDescriptionEn": "Add a Description in English",
+
+    "modifyProduct": "Modify Product",
+    "modifyOrder": "Modify Order",
+    "modifyCoupon": "Modify Coupon",
+    "modifyDiscount": "Modify Discount",
+    "modifyUser": "Modify User",
+
+    "deleteProduct": "Delete Product",
+    "deleteOrder": "Delete Order",
+    "deleteCoupon": "Delete Coupon",
+    "deleteDiscount": "Delete Discount",
+    "deleteUser": "Delete User",
+
+    "manageUsers": "Manage Users",
+    "manageEmployees": "Manage Employees",
+    "manageProducts": "Manage Products",
+    "manageOrders": "Manage Orders",
+    "manageCoupons": "Manage Coupons",
+    "manageDiscounts": "Manage Discounts",
+
+    "ordersList": "Orders list",
+    "usersList": "Users list",
+    "employeesList": "Employees list",
+    "couponsList": "Coupons list",
+    "discountsList": "Discounts list",
+    "productsList": "Products list"
   }
 }
