added new translations

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -19,15 +19,15 @@
     "image": "Image",
     "name": "Name",
     "surname": "Surname",
-    "productsManagement": "Product Management",
-    "couponsManagement": "Coupons Management",
+    "productsManagement": "Product management",
+    "couponsManagement": "Coupons management",
 
     "logout": "Logout",
-    "birthDate": "Birth Date",
+    "birthDate": "Birth date",
     "percentage": "Percentage",
     "value": "Value",
-    "personalArea": "Personal Area",
-    "profilePicture": "Profile Picture",
+    "personalArea": "Personal area",
+    "profilePicture": "Profile picture",
     "rowsPerPage": "Rows per page",
     "page": "Page",
     "or": "or",
@@ -36,52 +36,59 @@
     "search": "Search",
     "filter": "Filter",
     "dashboard": "Dashboard",
-    "pageNotFound": "Page Not Found",
+    "pageNotFound": "Page not found",
     "actions": "Actions",
-    "paymentStatus": "Payment Status",
+    "paymentStatus": "Payment status",
     "total": "Total",
     "address": "Address",
+    "addresses": "Addresses",
+    "country": "Country",
+    "zipCode": "ZIP code",
+    "instructions": "Instructions",
     "altImageIt": "Name of the picture in Italian",
     "altImageEn": "Name of the picture in English",
-    "expirationDate": "Expiration Date",
+    "expirationDate": "Expiration date",
+    "transactionDate": "Transaction date",
+    "authority": "Authority",
+    "products": "Products",
 
-    "orderDetails": "Order Details",
-    "productDetails": "Product Details",
-    "discountDetails": "Discount Details",
-    "couponDetails": "Coupon Details",
-    "userDetails": "User Details",
+    "orderDetails": "Order details",
+    "productDetails": "Product details",
+    "discountDetails": "Discount details",
+    "couponDetails": "Coupon details",
+    "userDetails": "User details",
 
     "errorHeavyImage": "The image is too big",
     "errorWrongFile": "The file you tried to upload must be",
 
-    "addProduct": "Add Product",
-    "addOrder": "Add Order",
-    "addCoupon": "Add Coupon",
-    "addDiscount": "Add Discount",
+    "addProduct": "Add product",
+    "addOrder": "Add order",
+    "addCoupon": "Add coupon",
+    "addDiscount": "Add discount",
     "addMarketingEmployee": "Add Marketing employee",
     "addDataEntryEmployee": "Add Data Entry employee",
     "addImage": "Add Image",
-    "addDescriptionIt": "Add a Description in Italian",
-    "addDescriptionEn": "Add a Description in English",
+    "addDescriptionIt": "Add a description in Italian",
+    "addDescriptionEn": "Add a description in English",
 
-    "modifyProduct": "Modify Product",
-    "modifyOrder": "Modify Order",
-    "modifyCoupon": "Modify Coupon",
-    "modifyDiscount": "Modify Discount",
-    "modifyUser": "Modify User",
+    "modifyProduct": "Modify product",
+    "modifyOrder": "Modify order",
+    "modifyCoupon": "Modify coupon",
+    "modifyDiscount": "Modify discount",
+    "modifyUser": "Modify user",
 
-    "deleteProduct": "Delete Product",
-    "deleteOrder": "Delete Order",
-    "deleteCoupon": "Delete Coupon",
-    "deleteDiscount": "Delete Discount",
-    "deleteUser": "Delete User",
+    "deleteProduct": "Delete product",
+    "deleteOrder": "Delete order",
+    "deleteCoupon": "Delete coupon",
+    "deleteDiscount": "Delete discount",
+    "deleteUser": "Delete user",
 
-    "manageUsers": "Manage Users",
-    "manageEmployees": "Manage Employees",
-    "manageProducts": "Manage Products",
-    "manageOrders": "Manage Orders",
-    "manageCoupons": "Manage Coupons",
-    "manageDiscounts": "Manage Discounts",
+    "manageUsers": "Manage users",
+    "manageEmployees": "Manage employees",
+    "manageProducts": "Manage products",
+    "manageOrders": "Manage orders",
+    "manageCoupons": "Manage coupons",
+    "manageDiscounts": "Manage discounts",
 
     "ordersList": "Orders list",
     "usersList": "Users list",
