--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -19,8 +19,75 @@
     "surname": "Cognome",
     "test": "Questo è un test",
     "productsManagement": "Gestione prodotti",
-    "addProduct": "Aggiungi prodotto",
     "couponsManagement": "Gestione coupon",
+
+    "logout": "Disconettiti",
+    "birthDate": "Data di nascita",
+    "percentage": "Percentuale",
+    "value": "Valore",
+    "personalArea": "Area personale",
+    "profilePicture": "Immagine del profilo",
+    "rowsPerPage": "Righe per pagina",
+    "page": "Pagina",
+    "or": "o",
+    "add": "Aggiungi",
+    "edit": "Modifica",
+    "search": "Cerca",
+    "filter": "Filtra",
+    "dashboard": "Bacheca",
+    "pageNotFound": "Pagina non trovata",
+    "actions": "Azioni",
+    "paymentStatus": "Stato del pagamento",
+    "total": "Totale",
+    "address": "Indirizzo",
+    "addresses": "Indirizzi",
+    "country": "Paese",
+    "zipCode": "CAP",
+    "instructions": "Istruzioni",
+    "altImageIt": "Nome dell'immagine in Italiano",
+    "altImageEn": "Nome dell'immagine in Inglese",
+    "expirationDate": "Data di scadenza",
+    "transactionDate": "Data della transazione",
+    "authority": "Ruolo",
+    "products": "Prodotti",
+
+    "orderDetails": "Dettagli dell'ordine",
+    "productDetails": "Dettagli del prodotto",
+    "discountDetails": "Dettagli del ribasso",
+    "couponDetails": "Dettagli del coupon",
+    "userDetails": "Dettagli dell'utente",
+
+    "errorHeavyImage": "L'immagine è troppo grande",
+    "errorWrongFile": "Il file deve essere di formato",
+
+    "addProduct": "Aggiungi prodotto",
+    "addOrder": "Aggiungi ordine",
+    "addCoupon": "Aggiungi coupon",
+    "addDiscount": "Aggiungi ribasso",
+    "addMarketingEmployee": "Aggiungi impiegato Marketing",
+    "addDataEntryEmployee": "Aggiungi impiegato Data Entry",
+    "addImage": "Aggiungi immagine",
+    "addDescriptionIt": "Aggiungi una descrizione in Italiano",
+    "addDescriptionEn": "Aggiungi una descrizione in Inglese",
+
+    "modifyProduct": "Modifica prodotto",
+    "modifyOrder": "Modifica ordine",
+    "modifyCoupon": "Modifica coupon",
+    "modifyDiscount": "Modifica ribasso",
+    "modifyUser": "Modifica utente",
+
+    "deleteProduct": "Elimina prodotto",
+    "deleteOrder": "Elimina ordine",
+    "deleteCoupon": "Elimina coupon",
+    "deleteDiscount": "Elimina ribasso",
+    "deleteUser": "Elimina utente",
+
+    "manageUsers": "Gestisci users",
+    "manageEmployees": "Gestisci impiegati",
+    "manageProducts": "Gestisci prodotti",
+    "manageOrders": "Gestisci ordini",
+    "manageCoupons": "Gestisci coupon",
+    "manageDiscounts": "Gestisci ribassi",
 
     "ordersList": "Lista ordini",
     "usersList": "Lista utenti",
