added new translations

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -47,10 +47,16 @@
     "instructions": "Instructions",
     "altImageIt": "Name of the picture in Italian",
     "altImageEn": "Name of the picture in English",
-    "expirationDate": "Expiration date",
+    "expireDate": "Expiration date",
     "transactionDate": "Transaction date",
     "authority": "Authority",
     "products": "Products",
+    "userId": "User Id",
+    "status": "Status",
+    "transaction": "Transaction",
+    "minOrder": "Minimum order",
+    "maxUsages": "Maximum usages",
+    "code": "Code",
 
     "orderDetails": "Order details",
     "productDetails": "Product details",
