--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -46,10 +46,16 @@
     "instructions": "Istruzioni",
     "altImageIt": "Nome dell'immagine in Italiano",
     "altImageEn": "Nome dell'immagine in Inglese",
-    "expirationDate": "Data di scadenza",
+    "expireDate": "Data di scadenza",
     "transactionDate": "Data della transazione",
     "authority": "Ruolo",
     "products": "Prodotti",
+    "userId": "Id utente",
+    "status": "Stato",
+    "transaction": "Transazione",
+    "minOrder": "Ordine minimo",
+    "maxUsages": "Numero di usi",
+    "code": "Codice",
 
     "orderDetails": "Dettagli dell'ordine",
     "productDetails": "Dettagli del prodotto",
@@ -82,7 +88,7 @@
     "deleteDiscount": "Elimina ribasso",
     "deleteUser": "Elimina utente",
 
-    "manageUsers": "Gestisci users",
+    "manageUsers": "Gestisci utenti",
     "manageEmployees": "Gestisci impiegati",
     "manageProducts": "Gestisci prodotti",
     "manageOrders": "Gestisci ordini",
