added new translations

--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -13,6 +13,8 @@
     "quantity": "Quantità",
     "date": "Data",
     "description": "Descrizione",
+    "descriptionIt": "Descrizione IT",
+    "descriptionEn": "Descrizione EN",
     "category": "Categoria",
     "image": "Immagine",
     "name": "Nome",
