--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -15,6 +15,8 @@
     "quantity": "Quantity",
     "date": "Date",
     "description": "Description",
+    "descriptionIt": "Description IT",
+    "descriptionEn": "Description EN",
     "category": "Category",
     "image": "Image",
     "name": "Name",
