created searchbar in AddOrder screen to select an item filtered with ID, styled the form button and the select menu item when shoes get filtered in AddOrder

--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -58,6 +58,7 @@
     "minOrder": "Ordine minimo",
     "maxUsages": "Numero di usi",
     "code": "Codice",
+    "searchProducts": "Cerca  prodotti",
 
     "orderDetails": "Dettagli dell'ordine",
     "productDetails": "Dettagli del prodotto",
