Added the possibility to change pictures inside the screen modify product

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -10,7 +10,9 @@
     "brand": "Brand",
     "colour": "Colour",
     "price": "Price",
+    "listedPrice": "Listed price",
     "size": "Size",
+    "sizes": "Sizes",
     "type": "Type",
     "quantity": "Quantity",
     "date": "Date",
@@ -19,6 +21,7 @@
     "descriptionEn": "Description EN",
     "category": "Category",
     "image": "Image",
+    "images": "Images",
     "name": "Name",
     "surname": "Surname",
     "role": "Role",
@@ -66,6 +69,7 @@
     "searchHere": "Search here",
     "repeatPassword": "Repeat password",
     "city": "City",
+    "isListed": "Is listed",
 
     "orderDetails": "Order details",
     "productDetails": "Product details",
