--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -10,7 +10,9 @@
     "brand": "Marca",
     "colour": "Colore",
     "price": "Prezzo",
+    "listedPrice": "Prezzo di listino",
     "size": "Taglia",
+    "sizes": "Taglie",
     "type": "Tipo",
     "quantity": "Quantità",
     "date": "Data",
@@ -19,6 +21,7 @@
     "descriptionEn": "Descrizione EN",
     "category": "Categoria",
     "image": "Immagine",
+    "images": "Immagini",
     "name": "Nome",
     "surname": "Cognome",
     "role": "Ruolo",
@@ -66,6 +69,7 @@
     "searchProductsById": "Cerca prodotti per ID",
     "searchHere": "Cerca qui",
     "city": "Città",
+    "isListed": "E' presente",
 
     "orderDetails": "Dettagli dell'ordine",
     "productDetails": "Dettagli del prodotto",
