added new translations

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -24,6 +24,8 @@
     "images": "Images",
     "name": "Name",
     "surname": "Surname",
+    "lastName": "Last name",
+    "authorities": "Authorities",
     "role": "Role",
     "productsManagement": "Product management",
     "couponsManagement": "Coupons management",
