Dashboard development, installed library react-apexcharts, creation of graphs and table for general overview, dashboardUtils created and translations updated

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -70,6 +70,8 @@
     "repeatPassword": "Repeat password",
     "city": "City",
     "isListed": "Is listed",
+    "numberOrders": "Number of orders",
+    "monthlyIncome": "Monthly income",
 
     "orderDetails": "Order details",
     "productDetails": "Product details",
