--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -70,6 +70,8 @@
     "searchHere": "Cerca qui",
     "city": "Città",
     "isListed": "E' presente",
+    "numberOrders": "Numbero di ordini",
+    "monthlyIncome": "Introito mensile",
 
     "orderDetails": "Dettagli dell'ordine",
     "productDetails": "Dettagli del prodotto",
