added new translations

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -6,6 +6,7 @@
     "password": "Password",
     "showPassword": "Show",
     "login": "Login",
+    "user": "User",
     "product": "Product",
     "brand": "Brand",
     "colour": "Colour",
