--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -6,6 +6,7 @@
     "telephone": "Telefono",
     "showPassword": "Mostra",
     "login": "Accedi",
+    "user": "Utente",
     "product": "Prodotto",
     "brand": "Marca",
     "colour": "Colore",
