--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -2,6 +2,8 @@
   "translation": {
     "phoneNumber": "Numero di telefono",
     "password": "Password",
+    "English": "Inglese",
+    "Italian": "Italiano",
     "email": "Email",
     "telephone": "Telefono",
     "showPassword": "Mostra",
