added new translations

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -8,6 +8,7 @@
     "Italian": "Italian",
     "showPassword": "Show",
     "login": "Login",
+    "save": "Save",
     "user": "User",
     "product": "Product",
     "brand": "Brand",
@@ -21,20 +22,29 @@
     "date": "Date",
     "description": "Description",
     "descriptionIt": "Description IT",
+    "description_it": "Description IT",
     "descriptionEn": "Description EN",
+    "description_eng": "Description EN",
     "category": "Category",
     "image": "Image",
     "images": "Images",
     "name": "Name",
+    "first_name": "Name",
     "surname": "Surname",
     "lastName": "Last name",
+    "last_name": "Last name",
     "authorities": "Authorities",
     "role": "Role",
     "productsManagement": "Product management",
     "couponsManagement": "Coupons management",
+    "personalData": "Personal data",
+    "yourAddresses": "Your addresses",
+    "notes": "Notes",
+    "remove": "Remove",
 
     "logout": "Logout",
     "birthDate": "Birth date",
+    "birth_date": "Birth date",
     "percentage": "Percentage",
     "value": "Value",
     "personalArea": "Personal area",
@@ -59,15 +69,19 @@
     "altImageIt": "Name of the picture in Italian",
     "altImageEn": "Name of the picture in English",
     "expireDate": "Expiration date",
+    "expire_date": "Expiration date",
     "transactionDate": "Transaction date",
     "authority": "Authority",
     "products": "Products",
     "id": "Id",
     "userId": "User Id",
+    "user_id": "User Id",
     "status": "Status",
     "transaction": "Transaction",
     "minOrder": "Minimum order",
+    "min_order": "Minimum order",
     "maxUsages": "Maximum usages",
+    "max_usages": "Maximum usages",
     "code": "Code",
     "searchProducts": "Search products",
     "searchProductsById": "Search products by ID",
@@ -77,6 +91,10 @@
     "isListed": "Is listed",
     "numberOrders": "Number of orders",
     "monthlyIncome": "Monthly income",
+    "label": "Label",
+    "nameSurname": "Name and surname",
+    "streetAddress": "Street address",
+    "zipcode": "ZIP code",
 
     "orderDetails": "Order details",
     "productDetails": "Product details",
@@ -101,6 +119,7 @@
     "addImage": "Add Image",
     "addDescriptionIt": "Add a description in Italian",
     "addDescriptionEn": "Add a description in English",
+    "addAddress": "Add address",
 
     "modify": "Modify",
     "modifyProduct": "Modify product",
@@ -108,6 +127,7 @@
     "modifyCoupon": "Modify coupon",
     "modifyDiscount": "Modify discount",
     "modifyUser": "Modify user",
+    "modifyAddress": "Modify address",
 
     "deleteProduct": "Delete product",
     "deleteOrder": "Delete order",
