--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -8,6 +8,7 @@
     "telephone": "Telefono",
     "showPassword": "Mostra",
     "login": "Accedi",
+    "save": "Salva",
     "user": "Utente",
     "product": "Prodotto",
     "brand": "Marca",
@@ -21,21 +22,28 @@
     "date": "Data",
     "description": "Descrizione",
     "descriptionIt": "Descrizione IT",
+    "description_it": "Descrizione IT",
     "descriptionEn": "Descrizione EN",
+    "description_eng": "Descrizione EN",
     "category": "Categoria",
     "image": "Immagine",
     "images": "Immagini",
     "name": "Nome",
+    "first_name": "Nome",
     "surname": "Cognome",
     "lastName": "Cognome",
+    "last_name": "Cognome",
     "authorities": "Ruoli",
     "role": "Ruolo",
     "productsManagement": "Gestione prodotti",
     "couponsManagement": "Gestione coupon",
     "repeatPassword": "Ripeti la password",
+    "personalData": "Dati personali",
+    "yourAddresses": "I tuoi indirizzi",
 
     "logout": "Disconettiti",
     "birthDate": "Data di nascita",
+    "birth_date": "Data di nascita",
     "percentage": "Percentuale",
     "value": "Valore",
     "personalArea": "Area personale",
@@ -60,15 +68,19 @@
     "altImageIt": "Nome dell'immagine in Italiano",
     "altImageEn": "Nome dell'immagine in Inglese",
     "expireDate": "Data di scadenza",
+    "expire_date": "Data di scadenza",
     "transactionDate": "Data della transazione",
     "authority": "Ruolo",
     "products": "Prodotti",
     "id": "Id",
     "userId": "Id utente",
+    "user_id": "Id utente",
     "status": "Stato",
     "transaction": "Transazione",
     "minOrder": "Ordine minimo",
-    "maxUsages": "Numero di usi",
+    "min_order": "Ordine minimo",
+    "maxUsages": "Usi massimi",
+    "max_usages": "Usi massimi",
     "code": "Codice",
     "searchProducts": "Cerca prodotti",
     "searchProductsById": "Cerca prodotti per ID",
@@ -77,6 +89,11 @@
     "isListed": "E' presente",
     "numberOrders": "Numbero di ordini",
     "monthlyIncome": "Introito mensile",
+    "label": "Label",
+    "nameSurname": "Nome e cognome",
+    "streetAddress": "Indirizzo",
+    "zipcode": "CAP",
+    "remove": "Rimuovi",
 
     "orderDetails": "Dettagli dell'ordine",
     "productDetails": "Dettagli del prodotto",
@@ -100,6 +117,7 @@
     "addImage": "Aggiungi immagine",
     "addDescriptionIt": "Aggiungi una descrizione in Italiano",
     "addDescriptionEn": "Aggiungi una descrizione in Inglese",
+    "addAddress": "Aggiungi indirizzo",
 
     "modify": "Modifica",
     "modifyProduct": "Modifica prodotto",
@@ -107,6 +125,7 @@
     "modifyCoupon": "Modifica coupon",
     "modifyDiscount": "Modifica ribasso",
     "modifyUser": "Modifica utente",
+    "modifyAddress": "Modifica indirizzo",
 
     "deleteProduct": "Elimina prodotto",
     "deleteOrder": "Elimina ordine",
