Added the dynamic form inputs to add product details

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -12,7 +12,7 @@
     "user": "User",
     "product": "Product",
     "brand": "Brand",
-    "colour": "Colour",
+    "color": "Colour",
     "price": "Price",
     "listedPrice": "Listed price",
     "size": "Size",
@@ -21,10 +21,10 @@
     "quantity": "Quantity",
     "date": "Date",
     "description": "Description",
-    "descriptionIt": "Description IT",
-    "description_it": "Description IT",
-    "descriptionEn": "Description EN",
-    "description_eng": "Description EN",
+    "descriptionIt": "Description in Italian",
+    "description_it": "Description in Italian",
+    "descriptionEn": "Description in English",
+    "description_eng": "Description in English",
     "category": "Category",
     "image": "Image",
     "images": "Images",
@@ -95,6 +95,8 @@
     "nameSurname": "Name and surname",
     "streetAddress": "Street address",
     "zipcode": "ZIP code",
+    "sellingPrice" : "Selling price",
+    "startingPrice": "Starting price",
 
     "orderDetails": "Order details",
     "productDetails": "Product details",
