--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -12,7 +12,7 @@
     "user": "Utente",
     "product": "Prodotto",
     "brand": "Marca",
-    "colour": "Colore",
+    "color": "Colore",
     "price": "Prezzo",
     "listedPrice": "Prezzo di listino",
     "size": "Taglia",
@@ -21,10 +21,10 @@
     "quantity": "Quantità",
     "date": "Data",
     "description": "Descrizione",
-    "descriptionIt": "Descrizione IT",
-    "description_it": "Descrizione IT",
-    "descriptionEn": "Descrizione EN",
-    "description_eng": "Descrizione EN",
+    "descriptionIt": "Descrizione in Italiano",
+    "description_it": "Descrizione in Italiano",
+    "descriptionEn": "Descrizione in Inglese",
+    "description_eng": "Descrizione in Inglese",
     "category": "Categoria",
     "image": "Immagine",
     "images": "Immagini",
@@ -94,6 +94,8 @@
     "streetAddress": "Indirizzo",
     "zipcode": "CAP",
     "remove": "Rimuovi",
+    "sellingPrice" : "Prezzo di vendita",
+    "startingPrice": "Prezzo iniziale",
 
     "orderDetails": "Dettagli dell'ordine",
     "productDetails": "Dettagli del prodotto",
