added new translations

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -41,6 +41,7 @@
     "yourAddresses": "Your addresses",
     "notes": "Notes",
     "remove": "Remove",
+    "recentOrders": "Recent orders",
 
     "logout": "Logout",
     "birthDate": "Birth date",
