--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -40,6 +40,7 @@
     "repeatPassword": "Ripeti la password",
     "personalData": "Dati personali",
     "yourAddresses": "I tuoi indirizzi",
+    "recentOrders": "Ordini recenti",
 
     "logout": "Disconettiti",
     "birthDate": "Data di nascita",
