Completed css of add product

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -100,6 +100,7 @@
     "countrySells": "Sales by state",
     "yearlyIncome": "Yearly income",
     "yearlySales": "Yearly sales",
+    "addProductDetails": "Add product details",
 
     "orderDetails": "Order details",
     "productDetails": "Product details",
