--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -99,6 +99,7 @@
     "countrySells": "Vendite per stato",
     "yearlyIncome": "Reddito annuo",
     "yearlySales": "Vendite annuali",
+    "addProductDetails": "Aggiungi dettagli prodotto",
 
     "orderDetails": "Dettagli dell'ordine",
     "productDetails": "Dettagli del prodotto",
